--- a/index.html
+++ b/index.html
@@ -181,14 +181,15 @@
 
 <script>
   // 1. YOUR FIREBASE CONFIG
-  const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-    databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
-    projectId: "YOUR_PROJECT_ID",
-    storageBucket: "YOUR_PROJECT_ID.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
+const firebaseConfig = {
+     apiKey: "AIzaSyAMQJ6c64BgWdNRMNY-wtMdQoIGcE2n7-Y",
+     authDomain: "adambirthday.firebaseapp.com",
+     databaseURL: "https://adambirthday-default-rtdb.firebaseio.com",
+     projectId: "adambirthday",
+     storageBucket: "adambirthday.firebasestorage.app",
+     messagingSenderId: "52484424752",
+     appId: "1:52484424752:web:dd6401e82e9696ff6359f5",
+     measurementId: "G-G7Q35RGYMM"
   };
 
   // 2. INITIALIZE
