--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
     </div>
 
     <div id="entries-section">
-        <h2 style="color: var(--gold); text-align: center; font-size: 2.2rem; text-transform: uppercase;">Fan Reviews</h2>
+	<h2 onclick="toggleAdmin()" style="color: var(--gold); text-align: center; font-size: 2rem; cursor: pointer;">
+    Fan Reviews
+	</h2>
         <div id="entriesList" class="entries-grid"></div>
     </div>
 
