--- a/index.html
+++ b/index.html
@@ -131,6 +131,59 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
         }
 
+        /* --- NEW BREAKING NEWS STYLE --- */
+        .entry-card:first-child {
+            grid-column: 1 / -1; /* Spans full width */
+            border: 2px solid var(--gold);
+            background: linear-gradient(145deg, #1a1a1a, #252525);
+            box-shadow: 0 0 25px rgba(241, 196, 15, 0.25);
+            position: relative;
+        }
+
+        .entry-card:first-child::before {
+            content: "LATEST REVIEW";
+            position: absolute;
+            top: -12px;
+            left: 20px;
+            background: var(--cinema-red);
+            color: white;
+            padding: 2px 12px;
+            font-size: 0.7rem;
+            font-weight: bold;
+            border-radius: 4px;
+            letter-spacing: 1px;
+        }
+
+        /* --- PULSING LIVE INDICATOR --- */
+        .live-indicator {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 4px 12px;
+            border-radius: 20px;
+            border: 1px solid rgba(212, 0, 0, 0.5);
+            margin-left: 15px;
+        }
+
+        .dot {
+            height: 10px;
+            width: 10px;
+            background-color: var(--cinema-red);
+            border-radius: 50%;
+            display: inline-block;
+            box-shadow: 0 0 10px var(--cinema-red);
+            animation: pulse 1.5s infinite;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(212, 0, 0, 0.7); }
+            70% { transform: scale(1); box-shadow: 0 0 0 10px rgba(212, 0, 0, 0); }
+            100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(212, 0, 0, 0); }
+        }
+
+        .live-text { font-size: 0.8rem; font-weight: bold; color: white; letter-spacing: 2px; }
+
         .entry-name { color: var(--gold); font-weight: bold; font-size: 1.25rem; }
         .entry-text { margin-top: 12px; color: #eee; line-height: 1.6; font-size: 1.05rem; }
         .entry-date { font-size: 0.8rem; color: #555; display: block; margin-top: 20px; text-align: right; }
@@ -143,6 +196,8 @@
         @media (max-width: 600px) {
             h1 { font-size: 2rem; }
             .main-stage { gap: 20px; }
+            .live-indicator { margin-left: 0; margin-top: 10px; }
+            #entries-section h2 { flex-direction: column; }
         }
     </style>
 </head>
@@ -172,9 +227,13 @@
     </div>
 
     <div id="entries-section">
-	<h2 onclick="toggleAdmin()" style="color: var(--gold); text-align: center; font-size: 2rem; cursor: pointer;">
-    Fan Reviews
-	</h2>
+        <h2 onclick="toggleAdmin()" style="color: var(--gold); text-align: center; font-size: 2rem; cursor: pointer; display: flex; align-items: center; justify-content: center;">
+            Fan Reviews
+            <div class="live-indicator">
+                <span class="dot"></span>
+                <span class="live-text">LIVE</span>
+            </div>
+        </h2>
         <div id="entriesList" class="entries-grid"></div>
     </div>
 
@@ -184,7 +243,7 @@
 
 <script>
   // 1. YOUR FIREBASE CONFIG
-const firebaseConfig = {
+  const firebaseConfig = {
      apiKey: "AIzaSyAMQJ6c64BgWdNRMNY-wtMdQoIGcE2n7-Y",
      authDomain: "adambirthday.firebaseapp.com",
      databaseURL: "https://adambirthday-default-rtdb.firebaseio.com",
@@ -199,7 +258,8 @@ const firebaseConfig = {
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
   const messagesRef = db.ref('messages');
-  // Analytics
+  
+  // Initialize Analytics
   const analytics = firebase.analytics();
   console.log("Analytics Active");
 
@@ -217,6 +277,8 @@ const firebaseConfig = {
     }).then(() => {
       document.getElementById('guestName').value = "";
       document.getElementById('guestMessage').value = "";
+      // Log custom event to analytics
+      analytics.logEvent('guest_message_submitted');
     });
   }
 
