--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
             max-width: 1200px;
         }
 
-        /* Poster Section */
         .poster-container {
             flex: 1;
             min-width: 320px;
@@ -61,7 +60,6 @@
             border: 4px solid #222;
         }
 
-        /* Entry Form Section with Sold Out Logic */
         .guestbook-form {
             position: relative;
             flex: 1;
@@ -74,35 +72,35 @@
             box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
+        /* SOLD OUT OVERLAY STYLES */
         .sold-out-overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.85);
             border-radius: 15px;
             display: flex;
             justify-content: center;
             align-items: center;
             z-index: 10;
-            backdrop-filter: blur(3px);
+            backdrop-filter: blur(4px);
+            text-align: center;
         }
 
         .stamp {
             transform: rotate(-15deg);
             color: var(--cinema-red);
-            font-size: 4rem;
+            font-size: 3.5rem;
             font-weight: 900;
             border: 8px solid var(--cinema-red);
-            padding: 10px 30px;
+            padding: 10px 20px;
             text-transform: uppercase;
             border-radius: 15px;
-            opacity: 0.9;
-            letter-spacing: 5px;
+            margin-bottom: 20px;
+            display: inline-block;
             box-shadow: 0 0 15px rgba(212, 0, 0, 0.5);
-            user-select: none;
-            pointer-events: none;
         }
 
         .form-group { margin-bottom: 25px; }
@@ -130,11 +128,9 @@
             border-radius: 8px;
             cursor: pointer;
             width: 100%;
-            transition: all 0.3s;
             text-transform: uppercase;
         }
 
-        /* Real-Time Reviews Section */
         #entries-section {
             margin-top: 60px;
             width: 100%;
@@ -157,7 +153,7 @@
             animation: slideIn 0.6s ease-out;
         }
 
-        /* Breaking News Style for Latest Review */
+        /* BREAKING NEWS HIGHLIGHT */
         .entry-card:first-child {
             grid-column: 1 / -1;
             border: 2px solid var(--gold);
@@ -178,7 +174,7 @@
             border-radius: 4px;
         }
 
-        /* LIVE Indicator Styles */
+        /* LIVE INDICATOR */
         .live-indicator {
             display: inline-flex;
             align-items: center;
@@ -208,7 +204,8 @@
             to { opacity: 1; transform: translateY(0); } 
         }
 
-        .entry-name { color: var(--gold); font-weight: bold; }
+        .entry-name { color: var(--gold); font-weight: bold; font-size: 1.25rem; }
+        .entry-text { margin-top: 12px; color: #eee; line-height: 1.6; }
         .entry-date { font-size: 0.8rem; color: #555; display: block; margin-top: 20px; text-align: right; }
     </style>
 </head>
@@ -224,7 +221,15 @@
         </div>
 
         <div class="guestbook-form">
-            <div class="sold-out-overlay"><div class="stamp">Sold Out</div></div>
+            <div class="sold-out-overlay">
+                <div style="text-align: center; padding: 20px;">
+                    <div class="stamp">Sold Out</div>
+                    <p style="color: var(--gold); font-size: 1.1rem; margin-top: 15px; font-weight: bold; text-transform: uppercase; letter-spacing: 1px; line-height: 1.4;">
+                        Thank you for being part of the cast! <br> 
+                        Your reviews are now playing on the big screen.
+                    </p>
+                </div>
+            </div>
 
             <h2 style="color: white; margin-top: 0; margin-bottom: 25px;">Sign the Guestbook</h2>
             <div class="form-group">
@@ -244,7 +249,7 @@
             Fan Reviews
             <div class="live-indicator">
                 <span class="dot"></span>
-                <span class="live-text" style="font-size: 0.8rem; color: white; letter-spacing: 2px;">LIVE</span>
+                <span style="font-size: 0.8rem; color: white; letter-spacing: 2px; font-weight: bold;">LIVE</span>
             </div>
         </h2>
         <div id="entriesList" class="entries-grid"></div>
@@ -274,7 +279,7 @@
   function addEntry() {
     const name = document.getElementById('guestName').value;
     const message = document.getElementById('guestMessage').value;
-    if (!name || !message) return alert("Director's Note: Name and message required!");
+    if (!name || !message) return;
 
     messagesRef.push({
       name: name,
